--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -8,21 +8,26 @@
 
 <body>
     <div id="qunit"></div>
-    <div id="qunit-fixture"></div>
-    <form>
-        <input name="text" />
-        <div class="has-error">Error text</div>
-    </form>
+    <div id="qunit-fixture">
+    	<form>
+       		<input name="text" />
+        	<div class="has-error">Error text</div>
+    	</form>
+	</div>
 
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="qunit.js"></script>
+	<script src= "../list.js"></script>
     <script>
 /*global $, test, equal */
 
-test("smoke test", function () {
-    equal($('.has-error').is(':visible'), true); //
-    $('.has-error').hide(); //
-    equal($('.has-error').is(':visible'), false); //
+test("errors should be hidden on keypress", function () {
+    $('input').trigger('keypress');  
+    equal($('.has-error').is(':visible'), false);
+});
+
+test("errors not be hidden unless there is a keypress", function () {
+    equal($('.has-error').is(':visible'), true);
 });
 
     </script>
